WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
116495
Fix null-pointer deref in DocumentLoader::responseReceived()
https://bugs.webkit.org/show_bug.cgi?id=116495
Summary
Fix null-pointer deref in DocumentLoader::responseReceived()
Ryosuke Niwa
Reported
2013-05-20 19:23:45 PDT
Consider merging
https://chromium.googlesource.com/chromium/blink/+/eb8a1c93a99909c361016e1a8f7bf8734f04120a
When a load is cancelled via x-frame-options, we dispatch a load event. The load event might detach the frame, in which case we shouldn't try to access the frameLoader().
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2013-05-23 15:30:43 PDT
<
rdar://problem/13977070
>
Alexey Proskuryakov
Comment 2
2013-06-20 17:45:09 PDT
Committed <
http://trac.webkit.org/r151812
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug