        https://bugs.webkit.org/show_bug.cgi?id=116495         Fix null-pointer deref in DocumentLoader::responseReceived()

Patch by Nate Chapin, reviewed by Mike West and myself.

        Test: http/tests/security/XFrameOptions/x-frame-options-deny-delete-frame-in-load-event.html

        * loader/DocumentLoader.cpp: (WebCore::DocumentLoader::responseReceived): Added
        a null check.



Canonical link: https://commits.webkit.org/135995@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@151812 268f45cc-cd09-0410-ab3c-d52691b4dbfc